MongoDB 1st day

--- a/login/Assistant/Assistant/Views/Offline/Select_list_to_save_offline.cshtml
+++ b/login/Assistant/Assistant/Views/Offline/Select_list_to_save_offline.cshtml
@@ -41,7 +41,7 @@
                 <div id="collapseOne_@k" class="collapse" aria-labelledby="headingOne_@k" data-parent="#accordionExample">
                     <div class="card-body">
 
-                        @productList.Product.Name
+                       @*@productList.Product.Name*@
 
                     </div>
                 </div>
