--- a/login/Assistant/Assistant/Views/Home/Create_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Create_list.cshtml
@@ -35,21 +35,19 @@
         <button class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj liste</button>
     </form>
 
-            @if (User.Identity.IsAuthenticated && Model.productList.List.UserId == null)
+            @if (User.Identity.IsAuthenticated && Model.IsPrivate == false)
             {
                 <div class="row mt-3"></div>
                 <form asp-controller="Home" asp-action="ChangeType" method="post">
-                    <input id="ListId" asp-for="@Model.productList.List.Id" name="ListId" hidden />
-                    <input id="UserId" asp-for="@Model.productList.List.UserId" name="UserId" hidden />
+                   
                     <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Zmien na publiczną</button>
                 </form>
             }
-            @if (User.Identity.IsAuthenticated && Model.productList.List.UserId != null)
+            @if (User.Identity.IsAuthenticated && Model.IsPrivate != false)
             {
                 <div class="row mt-3"></div>
                 <form asp-controller="Home" asp-action="ChangeType" method="post">
-                    <input id="ListId" asp-for="@Model.productList.List.Id" name="ListId" hidden />
-                    <input id="UserId" asp-for="@Model.productList.List.UserId" name="UserId" hidden />
+
                     <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Zmien na publiczna</button>
                 </form>
             }
