--- a/login/Assistant/Assistant/Areas/Identity/Pages/Account/Register.cshtml
+++ b/login/Assistant/Assistant/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,6 +8,51 @@
 
 
 @{
+
+    List<SelectListItem> Education = new List<SelectListItem>();
+    Education.Add(new SelectListItem
+    {
+        Text = "podstawowe",
+        Value = "podstawowe",
+        Selected = true
+    });
+    Education.Add(new SelectListItem
+    {
+        Text = "gimnazjalne",
+        Value = "gimnazjalne",
+        Selected = true
+    });
+    Education.Add(new SelectListItem
+    {
+        Text = "zasadnicze zawodowe",
+        Value = "zasadnicze zawodowe",
+        Selected = true
+    });
+    Education.Add(new SelectListItem
+    {
+        Text = "zasadnicze branżowe",
+        Value = " zasadnicze branzowe",
+        Selected = true
+    });
+    Education.Add(new SelectListItem
+    {
+        Text = "średnie branżowe",
+        Value = "srednie branzowe",
+        Selected = true
+    });
+    Education.Add(new SelectListItem
+    {
+        Text = "średnie",
+        Value = "srednie",
+    });
+    Education.Add(new SelectListItem
+    {
+        Text = "wyższe",
+        Value = "wyzsze",
+    });
+
+
+
     List<SelectListItem> listItems = new List<SelectListItem>();
     listItems.Add(new SelectListItem
     {
@@ -116,9 +161,9 @@
             <div class="form-group">
                 <label asp-for="Input.Salary"> Zarobki </label><br />
 
-                <label><input asp-for="Input.Salary" value="Poniżej 3000zł" type="radio" />Poniżej 3000zł</label><br />
-                <label><input asp-for="Input.Salary" value="3000-5000zł" type="radio" />3000-5000zł</label><br />
-                <label><input asp-for="Input.Salary" value="Powyżej 5000zł" type="radio" />Powyżej 5000zł</label><br />
+                <label><input asp-for="Input.Salary" value="Ponizej 3000zl" type="radio" />Poniżej 3000zł</label><br />
+                <label><input asp-for="Input.Salary" value="3000-5000zl" type="radio" />3000-5000zł</label><br />
+                <label><input asp-for="Input.Salary" value="Powyzej 5000zl" type="radio" />Powyżej 5000zł</label><br />
 
 
             </div>
@@ -127,8 +172,28 @@
 
                 @Html.DropDownListFor(model => model.Input.Home, listItems, "Miejsce zamieszkania")
 
-
             </div>
+            <div class="form-group">
+               <label asp-for="Input.Age"> Zarobki </label><br />
+
+               <label><input asp-for="Input.Age" value="Poniżej 18 roku życia" type="radio" />Poniżej 18 roku życia</label><br />
+               <label><input asp-for="Input.Age" value="Powyżej 18 roku życia" type="radio" />Powyżej 18 roku życia</label><br />
+
+
+            </div>            @*<div class="form-group">
+                <label asp-for="Input.Height"> Wzrost </label><br />
+
+                <label><input asp-for="Input.Height" value="Poniżej 165cm" type="radio" />Poniżej 3000zł</label><br />
+                <label><input asp-for="Input.Height" value="Powyżej 165cm" type="radio" />3000-5000zł</label><br />
+
+
+            </div>*@            <div class="form-group">
+    <label asp-for="Input.Education"> Wykształcenie </label><br />
+
+    @Html.DropDownListFor(model => model.Input.Education, Education, "Miejsce zamieszkania")
+
+
+</div>
 
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
