--- a/login/Assistant/Assistant/Views/ListDisplay/Private_list_load.cshtml
+++ b/login/Assistant/Assistant/Views/ListDisplay/Private_list_load.cshtml
@@ -1,6 +1,5 @@
-﻿@{
-    ViewData["Title"] = "Wczytaj Liste";
-}
+﻿@model List<Assistant.Models.MongoDBProdList>
+@{ ViewData["Title"] = "Wczytaj Liste"; }
 
 <div class="row">
     <h4>Listy do wczytania</h4>
@@ -12,52 +11,51 @@
 <div class="accordion" id="accordionExample">
     @{int k = 0;}
 
-    @foreach (var list in ViewBag.Lists)
+    @foreach (var list in Model)
     {
-        <div class="card-header" id="headingOne_@k">
+<div class="card-header" id="headingOne_@k">
 
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
+    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
 
-                @list.Name
+        @list.Name
 
-            </button>
-        </div>
-        <div class="row">
-            <form asp-controller="Home" asp-action="Edit_List" method="post">
-                <input type="hidden" name="list.Id" value="@list.Id" />
-                <button class="btn-primary"  style="margin-bottom:3px; width:100px;height:30px; margin-left:15px">Edytuj</button>
-            </form>
+    </button>
+</div>
+                <div class="row">
+                    <form asp-controller="Home" asp-action="Edit_List" method="post">
+                        <input type="hidden" name="Id" value="@list.Id.ToString()" />
+                        <button class="btn-primary" style="margin-bottom:3px; width:100px;height:30px; margin-left:15px">Edytuj</button>
+                    </form>
 
-            <form asp-controller="Home" asp-action="DeleteList" method="post">
-                <input type="hidden" name="list.Id" value="@list.Id" />
-                <button class="btn-primary" style="margin-bottom:3px; width:100px; height:30px; margin-left:20px">Usuń</button>
-            </form>
+                    <form asp-controller="Home" asp-action="DeleteList" method="post">
+                        <input type="hidden" name="list.Id" value="@list" />
+                        <button class="btn-primary" style="margin-bottom:3px; width:100px; height:30px; margin-left:20px">Usuń</button>
+                    </form>
 
-            <form asp-controller="Home" asp-action="ShoppingView" method="post">
-                <input type="hidden" name="id" value="@list.Id" />
-                <button class="btn-primary" onclick="GetListId(@list.Id)" style="margin-bottom:3px; width:100px;height:30px; margin-left:20px">Wybierz</button>
-            </form>
-        </div>
-        <div class="card">
-            @foreach (var productList in list.ProductList)
-            {
-                <div id="collapseOne_@k" class="collapse" aria-labelledby="headingOne_@k" data-parent="#accordionExample">
-                    <div class="card-body">
-
-                        @productList.Product.Name
-
-                    </div>
+                    <form asp-controller="Home" asp-action="ShoppingView" method="post">
+                        <input type="hidden" name="id" value="@list" />
+                        <button class="btn-primary" onclick="GetListId(@list.Id)" style="margin-bottom:3px; width:100px;height:30px; margin-left:20px">Wybierz</button>
+                    </form>
                 </div>
-            }
-        </div>
-        k++;
+                                <div class="card">
+                    @foreach (var item in list.ProductList)
+                    {
+                    <div id="collapseOne_@k" class="collapse" aria-labelledby="headingOne_@k" data-parent="#accordionExample">
+                        <div class="card-body">
+
+                            @item.Name
+
+                        </div>
+                    </div>
+                    }
+                                </div>k++;
     }
 </div>
 
 <script>
-        function GetListId(Id) {
+    function GetListId(Id) {
         localStorage.setItem("IdSelectedList", Id);
         sessionStorage.setItem("IdSelectedList", Id);
-        }
+    }
 </script>
 
