--- a/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
@@ -37,6 +37,9 @@
     }
     else
     {
+        <div class="row mt-3"></div>
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("GetData", "Home")'" value="Dodaj Dane testowe" style=" margin-bottom:3px; width:215px" />
+        <div class="row mt-3"></div>
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Listy publiczne" style="margin-bottom:3px; width:215px" />
     }
 
