--- a/login/Assistant/Assistant/Views/Utility/Share_list.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/Share_list.cshtml
@@ -1,7 +1,5 @@
-﻿
-@{
-    ViewData["Title"] = "Wybierz liste do udostepnienia";
-}
+﻿@model List<Assistant.Models.MongoDBProdList>
+@{ ViewData["Title"] = "Wybierz liste do udostepnienia"; }
 <div class="row">
     <h4>Listy do udostepnienia</h4>
 
@@ -11,38 +9,36 @@
 
 <div class="accordion" id="accordionExample">
     @{int k = 0;}
-    @foreach (var list in ViewBag.Lists)
+    @foreach (var list in Model)
     {
-        <div class="card-header" id="headingOne_@k">
-            <h5 class="mb-0"></h5>
-            <div class="row">
-                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
-                    @list.Name
+<div class="card-header" id="headingOne_@k">
+    <h5 class="mb-0"></h5>
+    <div class="row">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
+            @list.Name
 
 
-                    <form asp-controller="Home" asp-action="Get_share_email" method="post">
-                        <input id="ListId" name="ListId" hidden value="@list.Id" />
-                        <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Udostepnij</button>
-                    </form>
-                </button>
-            </div>
+            <form asp-controller="Home" asp-action="Get_share_email" method="post">
+                <input type="hidden" name="Id" value="@list.Id.ToString()" />
+                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;" value=@list> Udostepnij</button>
+            </form>
+        </button>
+    </div>
+
+</div>
+
+                <div class="card">
+                    @foreach (var item in list.ProductList)
+                    {
+    <div id="collapseOne_@k" class="collapse" aria-labelledby="headingOne_@k" data-parent="#accordionExample">
+        <div class="card-body">
+
+            @item.Name
 
         </div>
-
-        <div class="card">
-            @foreach (var productList in list.ProductList)
-            {
-                <div id="collapseOne_@k" class="collapse" aria-labelledby="headingOne_@k" data-parent="#accordionExample">
-                    <div class="card-body">
-
-                        @productList.Product.Name
-
-                    </div>
-                </div>
-            }
-        </div>
-        k++;
-    }
+    </div>}
+                </div>k++;
+                            }
 </div>
 
 
