--- a/login/Assistant/Assistant/Views/Home/Productlist.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Productlist.cshtml
@@ -23,11 +23,13 @@
             <div class="row">
                 <div class=" col-10" >
 
-                    <input type="hidden" name="IdToRemove" value="@item.Id" />
+                    <input type="hidden" name="Id" value="@item.Id.ToString()" />
                     @item.Name
                 </div>
                 <div class="col-2" >
-                    <button type="submit" style=""><img src="~/cross.png" width="15" height="15" /></button>
+                    <button type="submit" style=""><img src="~/cross.png" width="15" height="15" />
+                    
+                    </button>
                     
                 </div>
               
