--- a/login/Assistant/Assistant/Views/Home/Create_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Create_list.cshtml
@@ -32,8 +32,8 @@
         <form asp-controller="Home" asp-action="FinishList" method="post">
             <button class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj liste</button>
         </form>
-
-        <button class="btn-primary" type="button" value="Pokaż propozycje"  id="GetPropositions" >
+        <div class="row mt-3"></div>
+        <button class="btn-primary" type="button" value="Pokaż propozycje" id="GetPropositions" style="margin-bottom:3px; width:200px; margin-left:20%;">
             <div id="PropositionText">
                 Pokaż propozycje
             </div>
