--- a/login/Assistant/Assistant/Views/Home/Create_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Create_list.cshtml
@@ -12,9 +12,9 @@
 <div class="row">
     <div class="col-md-4">
 
-        @*<form asp-controller="Home" asp-action="AddProduct" method="post" id="AddProductName">*@
-                @*<input asp-for="Name" class="form-control" id="ProdName" value="" />
-                <span asp-validation-for="Name" class="text-danger"></span>*@
+        <form asp-controller="Home" asp-action="AddProduct" method="post" id="AddProductName">
+                <input asp-for="Name" class="form-control" id="ProdName" value="" />
+                <span asp-validation-for="Name" class="text-danger"></span>
                 <input type="text" name="ProdName" id="ProdName" value="test"/>
       
 
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <button type="submit" id="AddProduct" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj produkt</button>
             </div>
-        @*</form>*@
+        </form>
 
         <div class="row mt-3"></div>
         @*<form action="FinishList" method="post">
