--- a/login/Assistant/Assistant/Views/Generate/Neural_Network_Settings.cshtml
+++ b/login/Assistant/Assistant/Views/Generate/Neural_Network_Settings.cshtml
@@ -40,7 +40,7 @@
 
 
     <div class="form-group">
-        <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Zatwierdz ustawienia</button>
+        <button type="submit" class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Zatwierdz ustawienia</button>
     </div>
 </form>
 
