--- a/login/Assistant/Assistant/Views/Home/Get_share_email.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Get_share_email.cshtml
@@ -18,7 +18,7 @@
             <input type="text" name="mail"><br>
             <input type="text" name="ListId" hidden />
             <br />
-            <input type="submit" class="btn-primary" value="Udostepnij">
+            <input type="submit" class="btn btn-primary" value="Udostepnij">
         </form>
             @ViewData["ErrorMessage"]
     </div>
