--- a/login/Assistant/Assistant/Views/Utility/List_name.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/List_name.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <h4>Podaj Nazwe Listy</h4>
 
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
+    <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
 </div>
 <div class="row">
     <div class="col-md-4">
@@ -23,7 +23,7 @@
 
             <div class="form-group">
 
-                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dalej</button>
+                <button type="submit" class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dalej</button>
 
             </div>
         </form>
