--- a/login/Assistant/Assistant/Views/Home/Create_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Create_list.cshtml
@@ -2,7 +2,7 @@
 @{ ViewData["Title"] = "Stworz Liste"; }
 <div class="row" style="margin-left:0%">
     <h4> Tworzenie Listy</h4>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
+    <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
 </div>
 
 <div class="lead">Nazwa produktu</div>
@@ -12,27 +12,27 @@
 <div class="row">
     <div class="col-md-4">
 
-        <form asp-controller="Home" asp-action="AddProduct" method="post" id="AddProductName">
-                <input asp-for="Name" class="form-control" id="ProdName" value="" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-                <input type="text" name="ProdName" id="ProdName" value="test"/>
-      
+        @*<form asp-controller="Home" asp-action="AddProduct" method="post" id="AddProductName">*@
+        @*<input asp-for="Name" class="form-control" id="ProdName" value="" />*@
+        @*<span asp-validation-for="Name" class="text-danger"></span>*@
+        <input type="text" name="ProdName" id="ProdName"  />
 
-            <div class="row mt-3"></div>
-            <div class="form-group">
-                <button type="submit" id="AddProduct" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj produkt</button>
-            </div>
-        </form>
+
+        <div class="row mt-3"></div>
+        <div class="form-group">
+            <button type="submit" id="AddProduct" class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj produkt</button>
+        </div>
+        @*</form>*@
 
         <div class="row mt-3"></div>
         @*<form action="FinishList" method="post">
-            <button class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj liste</button>
-        </form>*@
+                <button class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj liste</button>
+            </form>*@
         <form asp-controller="Home" asp-action="FinishList" method="post">
-            <button class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj liste</button>
+            <button class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj liste</button>
         </form>
         <div class="row mt-3"></div>
-        <button class="btn-primary" type="button" value="Pokaż propozycje" id="GetPropositions" style="margin-bottom:3px; width:200px; margin-left:20%;">
+        <button class="btn btn-primary" type="button" value="Pokaż propozycje" id="GetPropositions" style="margin-bottom:3px; width:200px; margin-left:20%;">
             <div id="PropositionText">
                 Pokaż propozycje
             </div>
@@ -40,21 +40,21 @@
 
 
         @*@if (User.Identity.IsAuthenticated && Model.IsPrivate == false)
-        {
-            <div class="row mt-3"></div>
-            <form asp-controller="Home" asp-action="ChangeType" method="post">
+            {
+                <div class="row mt-3"></div>
+                <form asp-controller="Home" asp-action="ChangeType" method="post">
 
-                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Zmien na publiczną</button>
-            </form>
-        }
-        @if (User.Identity.IsAuthenticated && Model.IsPrivate != false)
-        {
-            <div class="row mt-3"></div>
-            <form asp-controller="Home" asp-action="ChangeType" method="post">
+                    <button type="submit" class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Zmien na publiczną</button>
+                </form>
+            }
+            @if (User.Identity.IsAuthenticated && Model.IsPrivate != false)
+            {
+                <div class="row mt-3"></div>
+                <form asp-controller="Home" asp-action="ChangeType" method="post">
 
-                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Zmien na publiczna</button>
-            </form>
-        }*@
+                    <button type="submit" class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Zmien na publiczna</button>
+                </form>
+            }*@
         <div id="div1">
 
         </div>
@@ -63,64 +63,77 @@
 </div>
 
 @*<div id="divPartial">
-    @await Html.PartialAsync("PropositionOfProducts")
-</div>*@
+        @await Html.PartialAsync("PropositionOfProducts")
+    </div>*@
 
-@if (Model.ProductList.Count() > 0)
-{
-    await Html.RenderPartialAsync("ProductList", Model.ProductList);
-}
-else
-{
-<h1> List is empty</h1>}
+<div id="ProdList">
+    @*@if (Model.ProductList.Count() > 0)
+    {
+        await Html.RenderPartialAsync("ProductList");
+    }
+    else
+    {
+<h1> List is empty</h1>
+    }*@
+</div>
+<div class="spinner-border" role="status" id="spinnerAddProd">
+    <span class="sr-only">Loading...</span>
+</div>
+
+
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <script>
     var newText = "Odśwież propozycje"
+    var AddProdSpinner = document.getElementById("spinnerAddProd")
     $("#GetPropositions").click(function() {
         $(this).text(newText);
     });
     $(document).ready(function () {
-
         $("#GetPropositions").click(function () {
+            $("#div1").load("/Home/PropositionOfProducts");
+        });
+    });
+    $('#spinnerAddProd').hide();
+    
+    $(document).ready(function () {
+
+        $("#AddProduct").click(function () {
 
             $("#div1").load("/Home/PropositionOfProducts");
         });
     });
 
-
     $(document).ready(function () {
         $("#AddProduct").click(function () {
+            $('#spinnerAddProd').show(); 
             var prodName = $("#ProdName").val();
+            //object data = {
+            //    Name: $("#ProdName").val(),
+            //    Id: null
+            //};
+
             console.log(prodName);
 
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("AddProduct", "Home")',
-                contentType: "application/json; charset=utf-8",
-                data: prodName,
+                dataType:"text",
+                /*contentType: "application/json; charset=utf-8",*/
+                data: { prodName: prodName },
                 error: function (err) {
                     console.log(err)
-             }
-            });
+                },
+                success: function () {
+                    $("#ProdList").load("/Home/ProductList");
+                    $('#spinnerAddProd').hide();
+                }
+            })
+
         });
     });
 
 </script>
 
-@*<script type="text/javascript">
-    $("#Add_Prod").click(function (e) {
-        console.log("clicked");
-        $('#form').submit();
-        $('#divPartial').load('/Home/PropositionOfProducts');
-    });
-</script>*@ 
-    @*<script>
- $(document).ready(function () {
-$("#GetPropositions").click(function () {
-$("#div1").load("/Home/PropositionOfProducts");
-});
-    });
-    </script>*@
