--- a/login/Assistant/Assistant/Views/ListDisplay/Private_list_load.cshtml
+++ b/login/Assistant/Assistant/Views/ListDisplay/Private_list_load.cshtml
@@ -5,7 +5,7 @@
     <h4>Listy do wczytania</h4>
 
 
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
+    <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
 </div>
 
 <div class="accordion" id="accordionExample">
@@ -24,17 +24,17 @@
                 <div class="row">
                     <form asp-controller="Home" asp-action="Edit_List" method="post">
                         <input type="hidden" name="Id" value="@list.Id.ToString()" />
-                        <button class="btn-primary" style="margin-bottom:3px; width:100px;height:30px; margin-left:15px">Edytuj</button>
+                        <button class="btn btn-primary" style="margin-bottom:3px; width:100px;height:30px; margin-left:15px">Edytuj</button>
                     </form>
 
                     <form asp-controller="Home" asp-action="DeleteList" method="post">
                         <input type="hidden" name="Id" value="@list.Id.ToString()" />
-                        <button class="btn-primary" style="margin-bottom:3px; width:100px; height:30px; margin-left:20px">Usuń</button>
+                        <button class="btn btn-primary" style="margin-bottom:3px; width:100px; height:30px; margin-left:20px">Usuń</button>
                     </form>
 
                     <form asp-controller="Home" asp-action="ShoppingView" method="post">
                         <input type="hidden" name="Id" value="@list.Id.ToString()" />
-                        <button class="btn-primary" onclick="GetListId(72)" style="margin-bottom:3px; width:100px;height:30px; margin-left:20px">Wybierz</button>
+                        <button class="btn btn-primary" onclick="GetListId(72)" style="margin-bottom:3px; width:100px;height:30px; margin-left:20px">Wybierz</button>
                     </form>
                 </div>
                                 <div class="card">
