--- a/login/Assistant/Assistant/Views/ListDisplay/Public_list_load.cshtml
+++ b/login/Assistant/Assistant/Views/ListDisplay/Public_list_load.cshtml
@@ -6,7 +6,7 @@
     <h4>Listy do wczytania</h4>
 
 
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
+    <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
 </div>
 <div class="col-sm-10" >
     <div class="accordion" id="accordionExample" >
@@ -26,13 +26,13 @@
 
                 <form asp-controller="Home" asp-action="DeleteList" method="post">
                     <input type="hidden" name="list.Id" value="@list.Id" />
-                    <button class="btn-primary" style="margin-bottom:3px; width:100px; height:30px; margin-left:20px">Usuń</button>
+                    <button class="btn btn-primary" style="margin-bottom:3px; width:100px; height:30px; margin-left:20px">Usuń</button>
                 </form>
                 
 
                 <form asp-controller="Home" asp-action="ListToShop" method="post">
                     <input type="hidden" name="list.Id" value="@list.Id" />
-                    <button class="btn-primary" style="margin-bottom:3px; width:100px;height:30px; margin-left:20px">Wybierz</button>
+                    <button class="btn btn-primary" style="margin-bottom:3px; width:100px;height:30px; margin-left:20px">Wybierz</button>
                 </form>
             </div>
 
