--- a/login/Assistant/Assistant/Views/Offline/Select_list_to_save_offline.cshtml
+++ b/login/Assistant/Assistant/Views/Offline/Select_list_to_save_offline.cshtml
@@ -11,7 +11,7 @@
     <h4>Listy do wczytania</h4>
 
 
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
+    <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
 </div>
 
 <div class="accordion" id="accordionExample">
@@ -30,7 +30,7 @@
         <div class="row">
             <form asp-controller="Offline" asp-action="DisplayOfflineList" method="post">
                 <input type="hidden" name="Id" value="@list.Id.ToString()" />
-                <button class="btn-primary" onclick="GetListId(72)" style="margin-bottom:3px; width:100px;height:30px; margin-left:15px">Zapisz listę</button>
+                <button class="btn btn-primary" onclick="GetListId(72)" style="margin-bottom:3px; width:100px;height:30px; margin-left:15px">Zapisz listę</button>
             </form>
         </div>
 
