--- a/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
@@ -16,21 +16,21 @@
 <div class="col-sm-3 text-center">
 
     <div class="row mt-3"></div>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("List_name", "Home")'" value="Stworz nowa listę" style=" margin-bottom:3px; width:215px" />
+    <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("List_name", "Home")'" value="Stworz nowa listę" style=" margin-bottom:3px; width:215px" />
 
     <div class="row mt-3"></div>
     @if (User.Identity.IsAuthenticated)
     {
 
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_mode", "Generate")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:215px" />
+        <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Select_mode", "Generate")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Listy publiczne" style="margin-bottom:3px; width:215px" />
+        <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Listy publiczne" style="margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Private_list_load", "Home")'" value="Listy prywatne" style=" margin-bottom:3px; width:215px" />
+        <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Private_list_load", "Home")'" value="Listy prywatne" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Share_list", "Home")'" value="Udostepnij liste" style=" margin-bottom:3px; width:215px" />
+        <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Share_list", "Home")'" value="Udostepnij liste" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_list_to_save_offline", "Offline")'" value="Zapisz listę do trybu offline" style=" margin-bottom:3px; width:215px" />
+        <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Select_list_to_save_offline", "Offline")'" value="Zapisz listę do trybu offline" style=" margin-bottom:3px; width:215px" />
 
 
 
@@ -38,9 +38,9 @@
     else
     {
         <div class="row mt-3"></div>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("GetData", "Home")'" value="Dodaj Dane testowe" style=" margin-bottom:3px; width:215px" />
+        <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("GetData", "Home")'" value="Dodaj Dane testowe" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Listy publiczne" style="margin-bottom:3px; width:215px" />
+        <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Listy publiczne" style="margin-bottom:3px; width:215px" />
     }
 
 
